--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@react-navigation/stack": "^7.4.8",
     "expo": "~54.0.10",
     "expo-router": "^6.0.8",
     "expo-status-bar": "~3.0.8",
